// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getModTypes 1`] = `
[
  {
    "base": "C",
    "strand": "+",
    "type": "m",
  },
]
`;

exports[`getModTypes 2`] = `
[
  {
    "base": "C",
    "strand": "+",
    "type": "m",
  },
  {
    "base": "C",
    "strand": "+",
    "type": "h",
  },
]
`;

exports[`getModTypes 3`] = `
[
  {
    "base": "C",
    "strand": "+",
    "type": "16061",
  },
]
`;
